2013-12-12 15:41 dpenkler

	* [r1617] Use argv[0] for ibterm name.
 	 - s/cvs/svn in INSTALL

2013-12-09 18:38 dpenkler

	* [r1616] Removed dependency on config.h in ibterm

2013-12-09 15:31 dpenkler

	* [r1615] Added new example programme: ibterm

2013-12-03 15:50 dpenkler

	* [r1614] Fix in drivers/Makefile.am to avoid depmod install warning
          - Added required -F $(LINUX_SRCDIR)/System.map argument to depmod -ae

2013-12-03 13:54 dpenkler

	* [r1613] Make tag for 3.2.20 release

2013-12-03 13:30 dpenkler

	* [r1612] Fix configure.ac to remove warning for Tcl when not enabled

2013-11-27 09:20 dpenkler

	* [r1611] Add patch for ARM from Carsten
	  - Cranked version number to 3.2.20

2013-11-25 21:10 dpenkler

	* [r1610] Add missing file lib/libgpib.pc.in

2013-11-25 19:45 dpenkler

	* [r1609] Minor upgrades
	  - Support for 3.12 kernel: use rwsem instead of mutex in lpvo_usb_gpib.c
	  - Added patch for pkgconfig support from rickyrockrat
	  - Made compilation of pc2 ISA module conditional on
	    either the use of --enable-isa in .configure
	    or on CONFIG_ISA=y in the kernel config (new in 3.12 32 bit
	    kernel)

2013-10-20 16:47  dpenkler

        * [r1608] Made tag for 3.2.19 release.

2013-10-20 16:41 dpenkler

	* [r1607] Document support for F/S82387


2013-10-20 12:20  dpenkler

        * [r1606] sys/osinit.c: removed unused ops for linux 3.11.x
	  - Updated doc for F/S82357 support
          - bumped version to 3.1.19

2013-07-30 12:20  dpenkler

        * [r1605] Made tag for 3.2.18 release.

2013-07-30 10:30  dpenkler

	* [r1604] Update doc for 82351A.
          agilent_82350b consistent driver name in printks' for easy grepping
	  Compile warning fixes:
	  - nec7210/interrupt.c: removed unused variable 
          - pc2_init.c: removed calls to deprecated check_region
	  - lib/ibConfYacc.y: yyerror declaration
	  - lib/ibib_internal.h: yyerror declaration

2013-07-25 19:54  dpenkler

	* [r1603] New board